some updates added future modules